<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/errorImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="21dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/error_icon" />

        <TextView
            android:id="@+id/errorViewTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="30dp"
            android:longClickable="false"
            android:clickable="false"
            android:linksClickable="false"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/generic_error_title"
            android:textColor="@color/textPrimaryColorDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/errorViewMessageTextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="37dp"
            android:longClickable="false"
            android:clickable="false"
            android:linksClickable="false"
            android:layout_marginRight="37dp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/generic_no_connection_message"
            android:textColor="@color/errorText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/errorViewSettingsButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_button_login_white"
            android:fontFamily="@font/opensans_semibold"
            android:foreground="@drawable/ripple_button_login_blue"
            android:padding="16dp"
            android:stateListAnimator="@null"
            android:text="@string/settings_text"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor" />

        <Button
            android:id="@+id/errorViewTryAgainButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_button_login_white"
            android:fontFamily="@font/opensans_semibold"
            android:foreground="@drawable/ripple_button_login_blue"
            android:padding="16dp"
            android:stateListAnimator="@null"
            android:text="@string/try_again_text"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor" />

    </LinearLayout>


</merge>