<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/attachmentDialogGrey"
    android:paddingLeft="8dp"
    android:paddingTop="32dp"
    android:paddingRight="8dp"
    android:paddingBottom="32dp">

    <ImageView
        android:id="@+id/imageViewGallery"
        android:layout_width="@dimen/attachment_icon_width"
        android:layout_height="@dimen/attachment_icon_width"
        android:src="@drawable/ic_gallery_with_square_bg"
        app:layout_constraintBottom_toTopOf="@+id/textViewGallery"
        app:layout_constraintEnd_toStartOf="@+id/imageViewCamera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageViewCamera"
        android:layout_width="@dimen/attachment_icon_width"
        android:layout_height="@dimen/attachment_icon_width"
        android:src="@drawable/ic_camera_with_square_bg"
        app:layout_constraintBottom_toTopOf="@+id/textViewCamera"
        app:layout_constraintEnd_toStartOf="@+id/imageViewDocument"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewGallery"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="45dp" />


    <ImageView
        android:id="@+id/imageViewDocument"
        android:layout_width="@dimen/attachment_icon_width"
        android:layout_height="@dimen/attachment_icon_width"
        android:src="@drawable/ic_document_with_square_bg"
        app:layout_constraintBottom_toTopOf="@+id/textViewDocument"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewCamera"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="36dp" />

    <TextView
        android:id="@+id/textViewGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gallery"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewGallery"
        app:layout_constraintStart_toStartOf="@+id/imageViewGallery"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGallery" />


    <TextView
        android:id="@+id/textViewCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/camera"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewCamera"
        app:layout_constraintStart_toStartOf="@+id/imageViewCamera"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCamera" />


    <TextView
        android:id="@+id/textViewDocument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/attach_files"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDocument"
        app:layout_constraintStart_toStartOf="@+id/imageViewDocument"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDocument" />


</androidx.constraintlayout.widget.ConstraintLayout>